k3s-manifest/app-deploy/ingress-fastapi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: backend
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: app.teman-wisata.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-fastapi
                port:
                  number: 80
  tls:
    - hosts:
        - app.teman-wisata.fun
      secretName: tls-app
